# ppbl1013

./: .gitignore  .stylish-haskell.yaml  README.md  cabal.project  flake.nix  startNode.sh
assignment/: assignment.cabal
assignment/app/: Main.hs
assignment/output/: always-succeeds.plutus  typed-always-succeeds.plutus
assignment/src/AlwaysSucceeds/: Compiler.hs  TypedValidator.hs  Validator.hs
nix/: project.nix  shell.nix
